# My-Site

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
api/: Cargo.toml
api/src/: github.rs  lib.rs  message.rs  reddit.rs  secret.rs
app/: Cargo.toml
app/src/: about.rs  homepage.rs  lib.rs  projects.rs  reddit_dl.rs  repo_dl.rs  secrets.rs  secrets_id.rs  test.rs  utils.rs
bots/: Cargo.toml
db/src/: lib.rs
frontend/: Cargo.toml
frontend/src/: lib.rs
server/: Cargo.toml
server/src/: ca.pem  endpoints.rs  main.rs
server/src/ws/server/: responder.rs  work.rs
shared/src/: lib.rs  models.rs
style/: tailwind.css
