[workspace]
resolver = "2"
members = ["api", "app", "frontend", "server", "shared"]

[workspace.dependencies]
leptos = { version = "0.7.8" }
leptos_meta = { version = "0.7.8" }
leptos_router = { version = "0.7.8" }
leptos_actix = "0.7.8"
actix-web = { version = "4.12.1", features = ["macros"] }
wasm-bindgen = "=0.2.104"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
anyhow = "1.0.100"

vial-shared = "0.1.0"

[[workspace.metadata.leptos]]
name = "my_site"
bin-package = "server"
lib-package = "frontend"

site-root = "target/site"
site-pkg-dir = "pkg"

tailwind-input-file = "style/tailwind.css"
assets-dir = "assets"

site-addr = "127.0.0.1:8080"
reload-port = 3001

browserquery = "defaults"

watch = false

env = "DEV"

bin-features = []
lib-features = []

bin-default-features = false
lib-default-features = false

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 'z'

[profile.dev]
opt-level = 0
debug = 0
