[workspace]
resolver = "2"
members = ["api", "app", "frontend", "server", "shared"]

[workspace.dependencies]
actix-web = { version = "4.13.0", features = ["macros"] }
anyhow = "1.0.102"
leptos = { version = "0.8.17" }
leptos_actix = "0.8.7"
leptos_meta = { version = "0.8.6" }
leptos_router = { version = "0.8.13" }
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
wasm-bindgen = "=0.2.108"

vial-shared = "0.2.0"

[[workspace.metadata.leptos]]
name = "my_site"
bin-package = "server"
lib-package = "frontend"

site-root = "target/site"
site-pkg-dir = "pkg"

tailwind-input-file = "style/tailwind.css"
assets-dir = "assets"

site-addr = "127.0.0.1:8080"
reload-port = 3001

browserquery = "defaults"

bin-features = []
lib-features = []

bin-default-features = false
lib-default-features = false

[profile.dev]
opt-level = 0
debug = 0

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
