[workspace]
resolver = "2"
members = ["api", "app", "frontend", "server", "shared", "bots", "db"]

[workspace.dependencies]
actix-web = { version = "4.13.0", features = ["macros"] }
anyhow = "1.0.102"
bots = { path = "bots" }
chrono = "0.4.45"
db = { path = "db" }
diesel = { version = "2.3.10", features = ["chrono"] }
diesel-async = { version = "0.9.2", features = ["bb8", "postgres"] }
leptos = { version = "0.8.17" }
leptos_actix = "0.8.7"
leptos_meta = { version = "0.8.6" }
leptos_router = { version = "0.8.13" }
log = "0.4.29"
redis = {
  version = "1.2.4",
  features = [
    "connection-manager",
    "tokio-comp",
    "tokio-rustls-comp",
  ]
}
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
shared = { path = "shared" }
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
ulid = "1.2.1"
vial-shared = "0.2.0"
wasm-bindgen = "=0.2.108"

[[workspace.metadata.leptos]]
name = "my_site"
bin-package = "server"
lib-package = "frontend"

site-root = "target/site"
site-pkg-dir = "pkg"

tailwind-input-file = "style/tailwind.css"
assets-dir = "assets"

site-addr = "127.0.0.1:8080"
reload-port = 3001

browserquery = "defaults"

bin-features = []
lib-features = []

bin-default-features = false
lib-default-features = false

[profile.dev]
opt-level = 0
debug = 0

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
