[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
serde.workspace = true
serde_json.workspace = true
leptos.workspace = true
log.workspace = true
vial-shared.workspace = true
anyhow = { workspace = true, optional = true }

dash-mpd = { version = "0.19.3", optional = true }
roux = { version = "2.2.15", optional = true }
reqwest = { version = "0.13.1", features = ["json"], optional = true }
octocrab = { version = "0.49.5", optional = true }
shared = { path = "../shared" }


[features]
hydrate = ["leptos/hydrate"]
ssr = [
    "leptos/ssr",
    "dep:anyhow",
    "dep:roux",
    "dep:reqwest",
    "dep:dash-mpd",
    "dep:octocrab",
]
