[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true, optional = true }
leptos.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
vial-shared.workspace = true

dash-mpd = { version = "0.20.2", optional = true }
octocrab = { version = "0.49.7", optional = true }
reqwest = { version = "0.13.2", features = ["json"], optional = true }
roux = { version = "2.2.15", optional = true }

shared = { path = "../shared" }

[features]
hydrate = ["leptos/hydrate"]
ssr = [
  "dep:anyhow",
  "dep:dash-mpd",
  "dep:octocrab",
  "dep:reqwest",
  "dep:roux",
  "leptos/ssr",
]
