[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true, optional = true }
leptos.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
vial-shared.workspace = true

octocrab = { version = "0.49.7", optional = true }
reqwest = { version = "0.13.2", features = ["json"], optional = true }

shared = { path = "../shared" }

[features]
hydrate = ["leptos/hydrate"]
ssr = [
  "dep:anyhow",
  "dep:octocrab",
  "dep:reqwest",
  "leptos/ssr",
]
