[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
leptos_actix = { workspace = true, optional = true }
thaw = { version = "0.4.4", optional = true }
log.workspace = true
web-sys = { version = "0.3.77", default-features = false, features = [
    "Window",
    "MediaQueryList",
    "Blob",
    "Url",
    "BlobPropertyBag",
] }
actix-web = { workspace = true, optional = true }
icondata = "0.5.0"
thousands = "0.2.0"
api = { path = "../api" }
shared = { path = "../shared" }

[features]
default = []
hydrate = ["leptos/hydrate", "thaw/hydrate"]
ssr = [
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "dep:leptos_actix",
    "thaw/ssr",
    "dep:actix-web",
    "api/ssr",
]
