[package]
name = "app"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
leptos_actix = { workspace = true, optional = true }
log.workspace = true
anyhow = { workspace = true }
serde.workspace = true

thaw = { version = "0.4.8", optional = true }
web-sys = { version = "0.3.77", default-features = false, features = [
    "Clipboard",
    "Navigator",
    "Window",
    "MediaQueryList",
    "Blob",
    "Url",
    "BlobPropertyBag",
    "MediaQueryListEvent",
] }
actix-web = { workspace = true, optional = true }
icondata = { version = "0.5.0", default-features = false, features = [
    "material-design-icons",
    "font-awesome",
    "tabler-icons",
] }
thousands = "0.2.0"
api = { path = "../api" }
shared = { path = "../shared" }
base64 = { version = "0.22.1" }
leptos_workers = "0.3.0"

vial-shared = { git = "https://github.com/TheRustyPickle/Vial" }
vial-core = { git = "https://github.com/TheRustyPickle/Vial" }

[features]
default = []
hydrate = ["leptos/hydrate", "thaw/hydrate"]
ssr = [
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "dep:leptos_actix",
    "thaw/ssr",
    "dep:actix-web",
    "api/ssr",
]
