[package]
name = "server"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app = { path = "../app", default-features = false, features = ["ssr"] }

leptos = { workspace = true, features = ["ssr"] }
leptos_meta.workspace = true
leptos_actix.workspace = true
actix-web.workspace = true
log.workspace = true
leptos_router.workspace = true

tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros"] }
pretty_env_logger = "0.5.0"
actix-files = "0.6.6"
roux = "2.2.14"
dotenvy = "0.15.7"
reqwest = "0.13.1"

vial-srv = { git = "https://github.com/TheRustyPickle/Vial" }
vial-shared = { git = "https://github.com/TheRustyPickle/Vial" }
