[package]
name = "server"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app = { path = "../app", default-features = false, features = ["ssr"] }

actix-web.workspace = true
leptos = { workspace = true, features = ["ssr"] }
leptos_actix.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
log.workspace = true
vial-shared = { workspace = true, features = ["config"] }

actix-files = "0.6.10"
chrono = "0.4.44"
dotenvy = "0.15.7"
pretty_env_logger = "0.5.0"
reqwest = "0.13.2"
tokio = { version = "1.51.1", features = ["macros", "rt-multi-thread"] }
vial-srv = "0.2.0"
