[package]
name = "server"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.1"
actix-files = "0.6.10"
actix-multipart = "0.8.0"
actix-web.workspace = true
actix-ws = "0.4.0"
alloy-core = "1.6.0"
alloy-signer = "2.1.0"
anyhow.workspace = true
app = { path = "../app", default-features = false, features = ["ssr"] }
base64 = "0.22.1"
bots.workspace = true
bs58 = "0.5.1"
chrono.workspace = true
dashmap = "6.2.1"
db = { workspace = true }
diesel = { workspace = true }
diesel-async = { workspace = true }
dotenvy = "0.15.7"
ed25519-dalek = { version = "2.2.0", features = ["pem"] }
futures-util = "0.3.32"
hex = "0.4.3"
hmac = "0.13.0"
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"] }
leptos = { workspace = true, features = ["ssr"] }
leptos_actix.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
log.workspace = true
pretty_env_logger = "0.5.0"
rand = "0.10.1"
redis.workspace = true
reqwest = { version = "0.13.2", features = ["form", "json"] }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.11.0"
tokio.workspace = true
ulid.workspace = true
url = "2.5.8"
urlencoding = "2.1"
vial-shared = { workspace = true, features = ["config"] }
vial-srv = "0.2.0"
